# LED_Cube_RGB

./: CMakeCache.txt  CMakeLists.txt  README.md  build_led_cube_rgb.sh  build_run_utests.sh  build_utests.sh  clean_utest_build.sh  clean_workspace.sh  main.c  main.cpp  run_uncrustify.py  uncrustify.cfg
.circleci/: config.yml
.github/workflows/: bandit.yml  codeql.yml  pr_checks.yml  scorecard.yml
animations/: CMakeLists.txt
animations/all_leds_all_colors/: CMakeLists.txt  all_leds_all_colors.cpp
animations/all_leds_all_colors/include/: all_leds_all_colors.hpp
animations/animation_utils/: CMakeLists.txt  animation_utils.cpp
animations/animation_utils/include/: animation_utils.hpp  animation_utils_types.hpp
animations/fan/: CMakeLists.txt  fan.cpp
animations/fan/include/: fan.hpp
animations/include/: animations.hpp
animations/rain/: CMakeLists.txt  rain.cpp
animations/rain/include/: rain.hpp
animations/raising_columns/: CMakeLists.txt  raising_columns.cpp
animations/raising_columns/include/: raising_columns.hpp
animations/random_cube_and_color/: CMakeLists.txt  random_cube_and_color.cpp
animations/random_cube_and_color/include/: random_cube_and_color.hpp
animations/snake/: CMakeLists.txt  snake.cpp
animations/snake/include/: snake.hpp
configuration/: launch.json  settings.json  tasks.json
doc/: creating_animations.md  environment_setup_linux.md
docker/: Dockerfile
led_cube/: CMakeLists.txt  led_animations.c  led_animations.cpp  led_cube.c  led_cube.cpp
led_cube/animation_runner/: CMakeLists.txt  animation_runner.cpp
led_cube/animation_runner/include/: animation_runner.hpp  animation_runner_types.hpp
led_cube/animations/: CMakeLists.txt  animations.cpp
led_cube/animations/include/: animations.hpp  animations_types.hpp
led_cube/cube/: CMakeLists.txt  led_cube.cpp
led_cube/cube/include/: led_cube.hpp
led_cube/include/: led_animations_api.h  led_animations_api.hpp  led_cube.h  led_cube.hpp
led_cube/led_matrix/: led_matrix.cpp
led_cube/led_matrix/include/: led_matrix.hpp  led_matrix_types.hpp
led_cube/led_rgb/: CMakeLists.txt  led_rgb.cpp
led_cube/led_rgb/include/: colors_config.hpp  led_rgb.hpp  led_rgb_types.hpp
led_cube/led_rgb/mocks/: led_rgb_mock.h
led_cube/memory_hub/: CMakeLists.txt  memory_hub.cpp
led_cube/memory_hub/include/: memory_hub.hpp
legacy_led_cube/: CMakeLists.txt  led_animations.c  led_cube.c
legacy_led_cube/include/: led_cube.h
lib/: CMakeLists.txt
lib/led_cube/: CMakeLists.txt
lib/led_cube/inc/: led_cube.h
lib/led_cube/src/: led_cube.c
lib/mcp23017/: CMakeLists.txt  mcp23017.c  mcp23017.cpp
lib/mcp23017/include/: mcp23017.h
new_led_cube/: CMakeLists.txt  led_cube.cpp  led_matrix.cpp  led_rgb.cpp  memory_hub.cpp
new_led_cube/cube/: CMakeLists.txt  led_cube.cpp
new_led_cube/cube/include/: led_cube.hpp
new_led_cube/include/: colors_config.hpp  led_cube.hpp  led_matrix.hpp  led_matrix_types.hpp  led_rgb.hpp  led_rgb_types.hpp  memory_hub.hpp
new_led_cube/include/mocks/: led_rgb_mock.h
new_led_cube/led_matrix/: CMakeLists.txt
new_led_cube/led_matrix/include/: led_matrix.hpp  led_matrix_types.hpp
new_led_cube/led_rgb/: led_rgb.cpp
new_led_cube/led_rgb/include/: led_rgb.hpp  led_rgb_types.hpp
new_led_cube/memory_hub/: memory_hub.cpp
new_led_cube/memory_hub/include/: memory_hub.hpp
rusty/: Cargo.toml
rusty/src/: lib.rs
tools/animation_init/: animation_init.py
tools/animation_init/templates/: CMakeLists  header  source
unit/: 3d_matrix_test.cpp  CMakeLists.txt  led_matrix_test.cpp  led_rgb_expectations  led_rgb_test.cpp
